--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,63 @@
 .fun {
     font-size: 30;
 }
+
+#all {
+    display: flex;
+    flex-direction: column;
+}
+
+body {
+    display: flex;
+    flex-direction: row;
+    font-family: Trebuchet MS;
+}
+
+form {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-family: Trebuchet MS;
+}
+
+form input {
+    margin-left: 10px;
+  
+}
+
+ul {
+    width: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+li {
+    border: solid 1px grey;
+    border-radius: 5px;
+    background-color: whitesmoke;
+    list-style: none;
+    margin-left: 5px;
+    margin-top: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+label {
+    margin-left: 10px;
+}
+
+button {
+    display: block;
+    border-radius: 5px;
+    margin: auto;
+    block-size: 25px;
+    margin-top: 20px;
+    background-color: lightblue;
+}
+
+#input-button {
+    background-color: lightblue;
+    border-radius: 2px;
+}
