--- a/css/main.css
+++ b/css/main.css
@@ -38,8 +38,10 @@ li {
     border-radius: 5px;
     background-color: whitesmoke;
     list-style: none;
-    margin-left: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
     margin-top: 5px;
+    margin-bottom: 5px;
     padding-left: 10px;
     padding-right: 10px;
 }
